# tdr

./: .gitignore  CMakeLists.txt  COPYING  Makefile  Makefile.am  Makefile.mingw  Makefile.unix  README  TODO  clean.sh  configure.ac  cube.cpp  cube.h  directdrawtexture.cpp  directdrawtexture.h  glad.c  gltexture.cpp  gltexture.h  linmath.h  main.cpp  programmanager.cpp  programmanager.h  renderobject.h  shaderprogram.cpp  texture.h  triangle.cpp  triangle.h  util.cpp  util.h  window.cpp  window.h
docs/: _templace.html  build.html  index.html  tdrmesh_spec.html
include/: camera.h  cube.h  directdrawtexture.h  renderobject.h  util.h
include/glad/: glad.h
main/: CMakeLists.txt  Makefile  configure.ac
main/include/: camera.h  config.h.in  directdrawtexture.h  j3dmesh.h  jsmn.h  mainutil.h  renderobject.h  renderwindow.h  tdrmain.h  tdrmesh.h  tdrmesh_old.h  texture.h  timer.h  tinyxml2.h  util.h
main/src/: CMakeLists.txt  Makefile  Makefile.am  camera.cpp  directdrawtexture.cpp  j3dmesh.cpp  jsmn.cpp  mainutil.cpp  miniz.c  miniz.h  tdrmesh.cpp  tdrmesh_old.cpp  timer.cpp  tinyxml2.cpp  util.cpp
renderer/: CMakeLists.txt  Makefile.am  configure.ac
renderer/include/: config.h.in  cube.h  gltexture.h  rendererutil.h  shaderprogram.h  tdrrenderer.h  window.h
renderer/src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.mingw  Makefile.unix  cube.cpp  glad.c  gltexture.cpp  rendererutil.cpp  shaderprogram.cpp  util.cpp  window.cpp
samples/: CMakeLists.txt  Makefile.am  Makefile.mingw  Makefile.unix  README  configure.ac
samples/_sample02/: CMakeLists.txt  cube.json  sample02.cpp
samples/sample01/: CMakeLists.txt  sample01.cpp
samples/sample02/: CMakeLists.txt  build.sh  cube.json  fshader.fs  sample02.cpp  scene.xml  vshader.vs
samples/sample03/: CMakeLists.txt  cube.json  sample03.cpp
samples/sample04/: CMakeLists.txt  sample04.cpp
shaders/: fshader.fs  vshader.vs
src/: Makefile.mingw  camera.cpp  cube.cpp  directdrawtexture.cpp  glad.c  main.cpp  window.cpp
test/: Makefile  main.cpp
tests/: CMakeLists.txt
tests/timer/: CMakeLists.txt  main.cpp
tests/tinyxml2/: CMakeLists.txt  xmltest.cpp
tests/tinyxml2/resources/: utf8testverify.xml
tools/: CMakeLists.txt
tools/tdrmeshtool/: CMakeLists.txt  help.cpp  main.cpp  meshgenerator.cpp
tools/tdrmeshtool/include/: config.h.in  help.h  meshgenerator.h
